--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p style="margin: 15px 0 10px">备注信息：消防栓漏水</p>
             <img src="images/Bitmap%20Copy%202.png" width="60" height="60" alt="">
         </div>
-        <div class="content_bd_ct" style="padding-bottom: 300px">
+        <div class="content_bd_ct" >
             <p>
                 <span class="content_before color">2017-03-05</span>
                 <span class="fl">巡查人员：萧伟</span>
