--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
 <!--header-->
@@ -21,7 +22,7 @@
 <div class="address_bg"></div>
 <!--address end-->
 <!--content-->
-<div class="content">
+<div class="content" style="position: relative;">
     <p class="text">巡查记录</p>
     <div class="content_bd">
         <div class="content_bd_ct">
@@ -40,7 +41,7 @@
             <p style="margin: 15px 0 10px">备注信息：消防栓漏水</p>
             <img src="images/Bitmap%20Copy%202.png" width="60" height="60" alt="">
         </div>
-        <div class="content_bd_ct" style="padding-bottom: 30px;">
+        <div class="content_bd_ct" style="padding-bottom: 70px;">
             <p>
                 <span class="content_before color">2017-03-05</span>
                 <span class="fl">巡查人员：萧伟</span>
@@ -54,14 +55,49 @@
                 <span class="fl">正常</span>
             </p>
             <p style="margin: 15px 0 10px">备注信息：无</p>
+
         </div>
+    </div>
+    <div class="footer">
+        <img src="images/arrow1.png" width="20" height="20" alt="">
+        <span>下拉加载更多</span>
     </div>
 </div>
 <!--content  end-->
 
-<div class="footer">
-    <img src="images/arrow1.png" width="20" height="20" alt="">
-    <span>下拉加载更多</span>
+<div class="code">
+    <img src="images/er.png" width="70" height="70" alt="">
+</div>
+<div class="dowebok">
+    <div class="row">
+        <div class="wow rollIn bg-red"></div>
+        <div class="wow bounceInU bg-yellow" data-wow-delay="0.5s">WOW.js</div>
+        <div class="wow lightSpeedIn bg-green" data-wow-delay="0.5s" data-wow-duration="0.15s"></div>
+    </div>
+
+    <div class="row">
+        <div class="wow bounceInLeft bg-purple">依赖 animate.css</div>
+        <div class="wow pulse bg-blue" data-wow-iteration="5" data-wow-duration="0.25s"></div>
+        <div class="wow lightSpeedIn bg-yellow">多种动画</div>
+    </div>
+
+    <div class="row">
+        <div class="wow bounce bg-green" data-wow-iteration="5" data-wow-duration="0.15s"></div>
+        <div class="wow bounceInUp bg-red">WOW.js</div>
+        <div class="wow bounceInRight bg-purple"></div>
+    </div>
+
+    <div class="row">
+        <div class="wow rollIn bg-red" data-wow-delay="0.5s">无需 jQuery！？</div>
+        <div class="wow bounceInDown bg-green" data-wow-delay="1s"></div>
+        <div class="wow bounceInRight bg-yellow" data-wow-delay="1.5s">谢谢</div>
+    </div>
 </div>
 </body>
+<script src="js/wow.min.js"></script>
+<script>
+    if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))){
+        new WOW().init();
+    };
+</script>
 </html>
