--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="address_bg"></div>
 <!--address end-->
 <!--content-->
-<div class="content" style="position: relative;">
+<div class="content" >
     <p class="text">巡查记录</p>
     <div class="content_bd">
         <div class="content_bd_ct">
@@ -57,10 +57,10 @@
             <p style="margin: 15px 0 10px">备注信息：无</p>
 
         </div>
-    </div>
-    <div class="footer">
-        <img src="images/arrow1.png" width="20" height="20" alt="">
-        <span>下拉加载更多</span>
+        <div class="footer">
+            <img src="images/arrow1.png" width="20" height="20" alt="">
+            <span>下拉加载更多</span>
+        </div>
     </div>
 </div>
 <!--content  end-->
