--- a/index.html
+++ b/index.html
@@ -5,99 +5,178 @@
     <title>Title</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" type="text/css" href="css/swiper-3.3.1.min.css"/>
+
 </head>
 <body>
 <!--header-->
-<div class="header">
-    <img src="images/bg.png"  alt="">
-    <p>巡查福异常情况上报</p>
-</div>
-<!--header  end-->
-<!--address-->
-<div class="address">
-    <p>当前位置：<span>南岳大庙南门</span></p>
 
-</div>
-<div class="address_bg"></div>
-<!--address end-->
-<!--content-->
-<div class="content" >
-    <p class="text">巡查记录</p>
-    <div class="content_bd">
-        <div class="content_bd_ct">
-            <p>
-                <span class="content_before">2017-03-05</span>
-                <span class="fl">巡查人员：萧伟</span>
-            </p>
-            <p>
-                <span>消防栓</span>
-                <span class="fl">异常</span>
-            </p>
-            <p>
-                <span>灭火器</span>
-                <span class="fl">正常</span>
-            </p>
-            <p style="margin: 15px 0 10px">备注信息：消防栓漏水</p>
-            <img src="images/Bitmap%20Copy%202.png" width="60" height="60" alt="">
+<div class="swiper-container">
+    <div class="refreshtip">下拉可以刷新</div>
+    <div class="swiper-wrapper w">
+        <div class="swiper-slide d">
+            <div class="init-loading list-group-item text-center" style="display: none;">下拉可以刷新</div>
+            <div class="swiper-container2">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide list-group">
+                        <div class="header">
+                            <img src="images/bg.png"  alt="">
+                            <p>巡查福异常情况上报</p>
+                        </div>
+                        <!--header  end-->
+                        <!--address-->
+                        <div class="address">
+                            <p>当前位置：<span>南岳大庙南门</span></p>
+
+                        </div>
+                        <div class="address_bg"></div>
+                        <!--address end-->
+                        <!--content-->
+                        <div class="content" >
+                            <p class="text">巡查记录</p>
+                            <div class="content_bd">
+                                <div class="content_bd_ct">
+                                    <p>
+                                        <span class="content_before">2017-03-05</span>
+                                        <span class="fl">巡查人员：萧伟</span>
+                                    </p>
+                                    <p>
+                                        <span>消防栓</span>
+                                        <span class="fl">异常</span>
+                                    </p>
+                                    <p>
+                                        <span>灭火器</span>
+                                        <span class="fl">正常</span>
+                                    </p>
+                                    <p style="margin: 15px 0 10px">备注信息：消防栓漏水</p>
+                                    <img src="images/Bitmap%20Copy%202.png" width="60" height="60" alt="">
+                                </div>
+                                <div class="content_bd_ct" style="padding-bottom: 70px;">
+                                    <p>
+                                        <span class="content_before color">2017-03-05</span>
+                                        <span class="fl">巡查人员：萧伟</span>
+                                    </p>
+                                    <p>
+                                        <span>消防栓</span>
+                                        <span class="fl">异常</span>
+                                    </p>
+                                    <p>
+                                        <span>灭火器</span>
+                                        <span class="fl">正常</span>
+                                    </p>
+                                    <p style="margin: 15px 0 10px">备注信息：无</p>
+
+                                </div>
+                                <div class="footer">
+                                    <img src="images/arrow1.png" width="20" height="20" alt="">
+                                    <span class="loadtip">下拉加载更多</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!--content  end-->
+
+                        <div class="code">
+                            <img src="images/er.png" width="70" height="70" alt="">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
-        <div class="content_bd_ct" style="padding-bottom: 70px;">
-            <p>
-                <span class="content_before color">2017-03-05</span>
-                <span class="fl">巡查人员：萧伟</span>
-            </p>
-            <p>
-                <span>消防栓</span>
-                <span class="fl">异常</span>
-            </p>
-            <p>
-                <span>灭火器</span>
-                <span class="fl">正常</span>
-            </p>
-            <p style="margin: 15px 0 10px">备注信息：无</p>
-
-        </div>
-        <div class="footer">
-            <img src="images/arrow1.png" width="20" height="20" alt="">
-            <span>下拉加载更多</span>
-        </div>
     </div>
+
+    
+    <div class="swiper-scrollbar"></div>
 </div>
-<!--content  end-->
 
-<div class="code">
-    <img src="images/er.png" width="70" height="70" alt="">
-</div>
-<div class="dowebok">
-    <div class="row">
-        <div class="wow rollIn bg-red"></div>
-        <div class="wow bounceInU bg-yellow" data-wow-delay="0.5s">WOW.js</div>
-        <div class="wow lightSpeedIn bg-green" data-wow-delay="0.5s" data-wow-duration="0.15s"></div>
-    </div>
-
-    <div class="row">
-        <div class="wow bounceInLeft bg-purple">依赖 animate.css</div>
-        <div class="wow pulse bg-blue" data-wow-iteration="5" data-wow-duration="0.25s"></div>
-        <div class="wow lightSpeedIn bg-yellow">多种动画</div>
-    </div>
-
-    <div class="row">
-        <div class="wow bounce bg-green" data-wow-iteration="5" data-wow-duration="0.15s"></div>
-        <div class="wow bounceInUp bg-red">WOW.js</div>
-        <div class="wow bounceInRight bg-purple"></div>
-    </div>
-
-    <div class="row">
-        <div class="wow rollIn bg-red" data-wow-delay="0.5s">无需 jQuery！？</div>
-        <div class="wow bounceInDown bg-green" data-wow-delay="1s"></div>
-        <div class="wow bounceInRight bg-yellow" data-wow-delay="1.5s">谢谢</div>
-    </div>
-</div>
 </body>
-<script src="js/wow.min.js"></script>
-<script>
-    if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))){
-        new WOW().init();
-    };
+<script src="js/jquery-2.1.4.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/swiper.jquery.min.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript">
+    var loadFlag = true;
+    var oi = 0;
+    var mySwiper = new Swiper('.swiper-container',{
+        direction: 'vertical',
+        scrollbar: '.swiper-scrollbar',
+        slidesPerView: 'auto',
+        mousewheelControl: true,
+        freeMode: true,
+        onTouchMove: function(swiper){		//手动滑动中触发
+            var _viewHeight = document.getElementsByClassName('swiper-wrapper')[0].offsetHeight;
+            var _contentHeight = document.getElementsByClassName('swiper-slide')[0].offsetHeight;
+
+
+            if(mySwiper.translate < 50 && mySwiper.translate > 0) {
+                $(".init-loading").html('下拉刷新...').show();
+            }else if(mySwiper.translate > 50 ){
+                $(".init-loading").html('释放刷新...').show();
+            }
+        },
+        onTouchEnd: function(swiper) {
+            var _viewHeight = document.getElementsByClassName('swiper-wrapper')[0].offsetHeight;
+            var _contentHeight = document.getElementsByClassName('swiper-slide')[0].offsetHeight;
+            // 上拉加载
+            if(mySwiper.translate <= _viewHeight - _contentHeight - 50 && mySwiper.translate < 0) {
+                // console.log("已经到达底部！");
+
+                if(loadFlag){
+                    $(".loadtip").html('正在加载...');
+                }else{
+                    $(".loadtip").html('没有更多啦！');
+                }
+
+                setTimeout(function() {
+                    for(var i = 0; i <5; i++) {
+                        oi++;
+                        $(".content_bd").eq(mySwiper2.activeIndex).append('<p>我是加载出来的'+oi+'...</p>');
+                    }
+                    $(".loadtip").html('上拉加载更多...');
+                    mySwiper.update(); // 重新计算高度;
+                }, 800);
+            }
+
+            // 下拉刷新
+            if(mySwiper.translate >= 50) {
+                $(".init-loading").html('正在刷新...').show();
+                $(".loadtip").html('上拉加载更多');
+                loadFlag = true;
+
+                setTimeout(function() {
+                    $(".refreshtip").show(0);
+                    $(".init-loading").html('刷新成功！');
+                    setTimeout(function(){
+                        $(".init-loading").html('').hide();
+                    },800);
+                    $(".loadtip").show(0);
+
+                    //刷新操作
+                    mySwiper.update(); // 重新计算高度;
+                }, 1000);
+            }else if(mySwiper.translate >= 0 && mySwiper.translate < 50){
+                $(".init-loading").html('').hide();
+            }
+            return false;
+        }
+    });
+    var mySwiper2 = new Swiper('.swiper-container2',{
+        onTransitionEnd: function(swiper){
+
+            $('.w').css('transform', 'translate3d(0px, 0px, 0px)')
+            $('.swiper-container2 .swiper-slide-active').css('height','auto').siblings('.swiper-slide').css('height','0px');
+            mySwiper.update();
+
+            $('.tab a').eq(mySwiper2.activeIndex).addClass('active').siblings('a').removeClass('active');
+        }
+
+    });
+    $('.tab a').click(function(){
+
+        $(this).addClass('active').siblings('a').removeClass('active');
+        mySwiper2.slideTo($(this).index(), 500, false)
+
+        $('.w').css('transform', 'translate3d(0px, 0px, 0px)')
+        $('.swiper-container2 .swiper-slide-active').css('height','auto').siblings('.swiper-slide').css('height','0px');
+        mySwiper.update();
+    });
 </script>
 </html>
